--- a/Paper/HistoryIA.tex
+++ b/Paper/HistoryIA.tex
@@ -39,7 +39,7 @@
 \hypersetup{
 	colorlinks=true,
 	linkcolor=blue,
-	pdftitle={Extended Essay},
+	pdftitle={History IA},
 	urlcolor=blue,
 	breaklinks=true,
 	citecolor=blue,
