new file:   Paper/HistoryIA.bbl 	modified:   Paper/HistoryIA.pdf 	new file:   Paper/HistoryIA.synctex.gz 	modified:   Paper/HistoryIA.tex 	modified:   Paper/SECTIONS/section_A.tex 	modified:   Paper/SECTIONS/section_B.tex

--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -1,6 +1,6 @@
-% !TeX root = /HistoryIA.tex
+% !TeX root = ..\HistoryIA.tex
 
-\documentclass{subfiles}
+\documentclass[../HistoryIA.tex]{subfiles}
 \begin{document}
 
 \begin{wrapfigure}{R}{0.5\textwidth}
@@ -9,6 +9,7 @@
                 (solid) and of Total Raw Cotton Exports (dashed) in the U.S.: 1815-1860
                 }
 \end{wrapfigure}  
+
 
 \autocite[Table A-III]{northeconomicgrowth1966}
 \autocite[Part 2, Table 2]{u.s.congressImportsduties1884}
