--- a/Paper/SECTIONS/section_A.tex
+++ b/Paper/SECTIONS/section_A.tex
@@ -1,6 +1,4 @@
-% !TeX root = HistoryIA.tex
-
-\documentclass{subfiles}
+\documentclass[../HistoryIA.tex]{subfiles}
 \begin{document}
 
 This paper seeks to investigate the question: \flq{} \textit{How did the Import of Raw Cotton to Great Britain Influence Its Willingness to Recognize the
@@ -13,7 +11,7 @@ recognition of the CSA as a sovereign nation. To do this, I shall rely on the va
 contemporary literature regarding the relations of both nations, and the large base of correspondences and personal records of those involved.
 
 A source that shall be relied upon heavily in assessing the economic state of the Antebellum South in the decades leading up to the war is 
-\say{\Citetitle{u.s.congressImportsduties1884}} from the first session of the 48th Congress of the United States of America, held in 1884. The purpose of
-this source 
+\say{\Citetitle{u.s.congressImportsduties1884}} from the first session of the 48th Congress of the United States of America, held in 1884. The purpose for 
+which this source was created was 
 
 \end{document}
