new file:   Paper/HistoryIA.log 	modified:   Paper/HistoryIA.pdf 	new file:   Paper/HistoryIA.synctex(busy) 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/SECTIONS/section_B.tex 	modified:   Paper/HistoryIA.log

--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -1,6 +1,4 @@
-% !TeX root = ..\HistoryIA.tex
-
-\documentclass[../HistoryIA.tex]{subfiles}
+\documentclass[.../HistoryIA.tex]{subfiles}
 \begin{document}
 
 \begin{wrapfigure}{R}{0.5\textwidth}
