deleted:    Paper/HistoryIA.log 	modified:   Paper/HistoryIA.pdf 	deleted:    Paper/HistoryIA.synctex(busy) 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/HistoryIA.tex 	modified:   Paper/SECTIONS/section_A.tex 	new file:   Paper/SECTIONS/section_B.log 	modified:   Paper/SECTIONS/section_B.tex 	new file:   Paper/SECTIONS/section_C.log 	modified:   Paper/SECTIONS/section_C.tex

--- a/Paper/HistoryIA.tex
+++ b/Paper/HistoryIA.tex
@@ -126,13 +126,13 @@ top=60pt
 %% SECTIONS
 %---------------------------------------------------------------------------------------------------------%
 \section{Section A}
-\subfile{SECTIONS/section_A.tex}
+\input{SECTIONS/section_A.tex}
 
 \section{Section B}
-\subfile{SECTIONS/section_B.tex}
+\input{SECTIONS/section_B.tex}
 
 \section{Section C} 
-\subfile{SECTIONS/section_C.tex}
+\input{SECTIONS/section_C.tex}
 %---------------------------------------------------------------------------------------------------------%
 
 \printbibliography
