--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -1,5 +1,4 @@
-\documentclass[.../HistoryIA.tex]{subfiles}
-\begin{document}
+% !TeX root = ../HistoryIA.tex
 
 \begin{wrapfigure}{R}{0.5\textwidth}
     \input{TABLES/cotton_v_exports.tex}
@@ -8,8 +7,5 @@
                 }
 \end{wrapfigure}  
 
-
 \autocite[Table A-III]{northeconomicgrowth1966}
 \autocite[Part 2, Table 2]{u.s.congressImportsduties1884}
-
-\end{document}
