--- a/Paper/SECTIONS/section_A.tex
+++ b/Paper/SECTIONS/section_A.tex
@@ -1,5 +1,4 @@
-\documentclass[../HistoryIA.tex]{subfiles}
-\begin{document}
+% !TeX root = ../HistoryIA.tex
 
 This paper seeks to investigate the question: \flq{} \textit{How did the Import of Raw Cotton to Great Britain Influence Its Willingness to Recognize the
 Confederate States of America?}\frq{}. It is well-known that the southern United States is a largely agrarian region of the nation, and further that the 
@@ -13,5 +12,3 @@ contemporary literature regarding the relations of both nations, and the large b
 A source that shall be relied upon heavily in assessing the economic state of the Antebellum South in the decades leading up to the war is 
 \say{\Citetitle{u.s.congressImportsduties1884}} from the first session of the 48th Congress of the United States of America, held in 1884. The purpose for 
 which this source was created was 
-
-\end{document}
