--- a/Paper/SECTIONS/section_A.tex
+++ b/Paper/SECTIONS/section_A.tex
@@ -9,6 +9,6 @@ Confederate States of America [CSA]) with Great Britain, and the effects of this
 recognition of the CSA as a sovereign nation. To do this, I shall rely on the vast contemporary records of exports and manufactures, the body of post-
 contemporary literature regarding the relations of both nations, and the large base of correspondences and personal records of those involved.
 
-A source that shall be relied upon heavily in assessing the economic state of the Antebellum South in the decades leading up to the war is 
-\say{\Citetitle{u.s.congressImportsduties1884}} from the first session of the 48th Congress of the United States of America, held in 1884. The purpose for 
-which this source was created was 
+A source that shall be relied upon heavily in assessing the economic reliance of the Antebellum South on cotton in the decades leading up to the war is 
+Douglass C. \shortcite{northeconomicgrowth1966} (1966). In this book, North argues that the critical period of economic development in the United States
+was, contrary to the accepted narrative at the time, not in
