--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -1,11 +1,10 @@
 % !TeX root = ../HistoryIA.tex
 
-\begin{wrapfigure}{R}{0.5\textwidth}
+\begin{wrapfigure}{R}{0.5\textwidth}\label{fig.: B.1}
     \input{TABLES/cotton_v_exports.tex}
     \captionof{figure}{Value (hundreds of millions of dollars) of Total Exports 
                 (solid) and of Total Raw Cotton Exports (dashed) in the U.S.: 1815-1860
-                }
+    }
 \end{wrapfigure}  
 
-\autocite[Table A-III]{northeconomicgrowth1966}
-\autocite[Part 2, Table 2]{u.s.congressImportsduties1884}
+\autocites(The data for figure \ref{fig.: B.1} comes from:)()[(Total Exports)][Table A-III]{northeconomicgrowth1966}[(Cotton Exports)][Part 2, Table 2]{u.s.congressImportsduties1884}
