--- a/Paper/HistoryIA.tex
+++ b/Paper/HistoryIA.tex
@@ -129,7 +129,7 @@ top=60pt
 \input{SECTIONS/section_A.tex}
 
 \section{Section B}
-\input{SECTIONS/section_B.tex}
+\include{SECTIONS/section_B.tex}
 
 \section{Section C} 
 \input{SECTIONS/section_C.tex}
