modified:   Paper/.vscode/ltex.dictionary.en-US.txt 	modified:   Paper/Bib/History_IA.bib 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/SECTIONS/section_A.tex

--- a/Paper/Bib/History_IA.bib
+++ b/Paper/Bib/History_IA.bib
@@ -23,6 +23,20 @@
   urldate      = {2024-11-01}
 }
 
+@article{d2c02537-2198-39d4-99f3-ed8cc35be1d6,
+  issn      = {00021482, 15338290},
+  url       = {http://www.jstor.org/stable/3739625},
+  author    = {Eli Ginzberg},
+  journal   = {Agricultural History},
+  number    = {4},
+  pages     = {147--156},
+  publisher = {Agricultural History Society},
+  title     = {The Economics of British Neutrality during the American Civil War},
+  urldate   = {2024-11-21},
+  volume    = {10},
+  year      = {1936}
+}
+
 @book{davismessagespapers1966,
   title     = {The Messages and Papers of {{Jefferson Davis}} and the {{Confederacy}}, Including Diplomatic Correspondence, 1861-1865},
   author    = {Davis, Jefferson},
