--- a/Paper/SECTIONS/section_A.tex
+++ b/Paper/SECTIONS/section_A.tex
@@ -17,3 +17,5 @@ to include some outdated information or analysis, as is the nature of the field.
 through the fact that it provides vast quantities of data, compiled from various other sources, regarding the economic state of the nation, and specifically
 the South, which are readily available for analysis and interpretation.
 
+For reference on the diplomatic affairs of the CSA with Great Britain during the Civil War, I have found the eminent economist and economic historian Eli 
+Ginzberg's \shortcite{}
