new file:   .vscode/ltex.dictionary.en-US.txt 	deleted:    .vscode/settings.json 	modified:   Paper/Bib/History_IA.bib 	modified:   Paper/HistoryIA.bbl 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/SECTIONS/section_A.tex

--- a/Paper/SECTIONS/section_A.tex
+++ b/Paper/SECTIONS/section_A.tex
@@ -18,4 +18,4 @@ through the fact that it provides vast quantities of data, compiled from various
 the South, which are readily available for analysis and interpretation.
 
 For reference on the diplomatic affairs of the CSA with Great Britain during the Civil War, I have found the eminent economist and economic historian Eli 
-Ginzberg's \shortcite{}
+Ginzberg's \shortcite{ginzbergeconomicsbritish1936}
