--- a/Paper/SECTIONS/section_A.tex
+++ b/Paper/SECTIONS/section_A.tex
@@ -17,5 +17,10 @@ to include some outdated information or analysis, as is the nature of the field.
 through the fact that it provides vast quantities of data, compiled from various other sources, regarding the economic state of the nation, and specifically
 the South, which are readily available for analysis and interpretation.
 
-For reference on the diplomatic affairs of the CSA with Great Britain during the Civil War, I have found the eminent economist and economic historian Eli 
-Ginzberg's \shortcite{ginzbergeconomicsbritish1936}
+For reference on the diplomatic affairs of the CSA with Great Britain during the Civil War, I have found the compilation \citetitle{davismessagespapers1966}
+to be an excellent primary account of the Confederate perception of diplomatic prospects in Great Britain. This source provides a near-comprehensive 
+record of the reports sent from the ambassadors of the CSA in Britain and received by the officials of the nation. The value of this source is difficult
+to understate, as it provides ample contemporary evidence for the state of affairs between the two parties on which this paper shall focus, and further
+contains much reference to the role of cotton in these affairs. The obvious limitation of this source comes from the fact that, though skilled diplomats,
+the authors of the letters and reports contained within the source were heavily biased towards the Confederacy, and as such their perception of the 
+prospect of British intervention often failed to reflect the truth of the matter. 
