modified:   Paper/.vscode/ltex.dictionary.en-US.txt 	modified:   Paper/Bib/History_IA.bib 	modified:   Paper/HistoryIA.bbl 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/HistoryIA.tex 	modified:   Paper/SECTIONS/section_A.tex 	modified:   Paper/SECTIONS/section_B.tex

--- a/Paper/Bib/History_IA.bib
+++ b/Paper/Bib/History_IA.bib
@@ -39,7 +39,7 @@
 
 @book{davismessagespapers1966,
   title     = {The Messages and Papers of {{Jefferson Davis}} and the {{Confederacy}}, Including Diplomatic Correspondence, 1861-1865},
-  author    = {Davis, Jefferson},
+  author    = {},
   editor    = {Nevins, Allan and Richardson, James D.},
   date      = {1966},
   publisher = {New York, Chelsea House-R. Hector},
