--- a/Paper/SECTIONS/section_A.tex
+++ b/Paper/SECTIONS/section_A.tex
@@ -1,7 +1,7 @@
 % !TeX root = ../HistoryIA.tex
 
-This paper seeks to investigate the question: \flq{} \textit{How did the Import of Raw Cotton to Great Britain Influence Its Willingness to Recognize the
-Confederate States of America?}\frq{}. It is well-known that the southern United States is a largely agrarian region of the nation, and further that the 
+This paper seeks to investigate the question: \flq{}\textit{How did the Export of Southern Raw Cotton to Great Britain Influence Its Willingness to Recognize the
+Confederate States of America as a Sovereign Nation?}\frq{}. It is well-known that the southern United States is a largely agrarian region of the nation, and further that the 
 economy of these states has, since the colonial era, been heavily dependent on the exportation of various \flq{}cash crops\frq{}. Cotton, the crop with which 
 the 19th century south is most associated, became the staple export of the region, and indeed may be argued to have kick-started or at least supported the 
 lucrative textile industry of Great Britain. In this paper I examine the economic codependency of the Antebellum South (and subsequently the of the 
@@ -10,7 +10,7 @@ recognition of the CSA as a sovereign nation. To do this, I shall rely on the va
 contemporary literature regarding the relations of both nations, and the large base of correspondences and personal records of those involved.
 
 A source that shall be relied upon heavily in assessing the economic reliance of the Antebellum South on cotton in the decades leading up to the war is 
-Douglass C. \shortcite{northeconomicgrowth1966} (1966). In this book, North argues that the critical period of economic development in the United States, 
+Douglass C. North's \citetitle{northeconomicgrowth1966} (1966). In this book, North argues that the critical period of economic development in the United States, 
 contrary to the accepted narrative at the time, which supposed it to have taken place in the reconstruction era or later, in fact occurred between the
 years 1790 and 1860. Though this argument is outside the scope of this paper, it should be noted that this source is far from modern, and is likely
 to include some outdated information or analysis, as is the nature of the field. The work has, however, maintained relevance into recent years
