--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -1,5 +1,16 @@
 % !TeX root = ../HistoryIA.tex
 
+\autocites(The data for figure \ref{fig.: B.1} comes from:)()[(Total Exports)][Table A-III]{northeconomicgrowth1966}[(Cotton Exports)][Part 2, Table 2]{u.s.congressImportsduties1884}
+On the eve of the American Civil War, U.S. cotton accounted for over 88\% of the cotton imported into Great Britain \autocite[40]{baileyOtherSide1994}. This 
+cotton was, as noted by Joseph Inikori, the key to the English economy in the mid-19th century: 
+\begin{quote}
+    Indeed, \say{the Industrial Revolution} in England, in the strict sense of the phrase, is little more than a revolution in [...] cotton textile production.
+    \autocite[Joseph Inikori, {The Slave Trade and Revolution in Cotton Textile Production in England}, quoted in][40]{baileyOtherSide1994}
+\end{quote}
+The importance of this economic relationship for the Confederate cause was not lost on the rebelling sates, and unquestionably played a significant role in their 
+foreign policy towards England throughout the course of the war. However, the extent to which this was an effective diplomatic strategy is not comparably evident,
+and is the central focus of this investigation. 
+
 \begin{wrapfigure}{R}{0.5\textwidth}\label{fig.: B.1}
     \input{TABLES/cotton_v_exports.tex}
     \captionof{figure}{Value (hundreds of millions of dollars) of Total Exports 
@@ -7,4 +18,3 @@
     }
 \end{wrapfigure}  
 
-\autocites(The data for figure \ref{fig.: B.1} comes from:)()[(Total Exports)][Table A-III]{northeconomicgrowth1966}[(Cotton Exports)][Part 2, Table 2]{u.s.congressImportsduties1884}
