new file:   .vscode/ltex.hiddenFalsePositives.en-US.txt 	new file:   Paper/DATA/dataFun.py 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/SECTIONS/section_B.tex

--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -18,3 +18,4 @@ and is the central focus of this investigation.
     }
 \end{wrapfigure}  
 
+In the continental United States, in the time leading up to the war, the amount and value of exported goods skyrocketed, and, though by 1860 the 
