modified:   Paper/DATA/dataFun.py 	modified:   Paper/DATA/output.dat 	new file:   Paper/HistoryIA.aux 	new file:   Paper/HistoryIA.bcf 	new file:   Paper/HistoryIA.blg 	new file:   Paper/HistoryIA.log 	new file:   Paper/HistoryIA.out 	modified:   Paper/HistoryIA.pdf 	new file:   Paper/HistoryIA.run.xml 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/HistoryIA.tex 	new file:   Paper/HistoryIA.toc 	modified:   Paper/SECTIONS/section_B.tex 	modified:   Paper/TABLES/cotton_v_exports.tex 	deleted:    Paper/TABLES/cotton_v_exports.tikz 	new file:   Paper/TABLES/percentage_xports.tex

--- a/Paper/HistoryIA.tex
+++ b/Paper/HistoryIA.tex
@@ -28,7 +28,7 @@
 \doublespacing
 \usepackage[toc,page]{appendix}
 \usepackage{amsthm, amsfonts, amssymb, amsmath}
-\usepackage{tabularx, caption2, blindtext}
+\usepackage{tabularx, blindtext}
 %---------------------------------------------------------------------------------------------------------%
 
 %% LINKS
@@ -92,9 +92,8 @@ top=60pt
 
 %% DATA
 %---------------------------------------------------------------------------------------------------------%
-\usepackage{pgfplots}
+\usepackage{pgfplots, subfig}
 \pgfplotsset{compat = 1.18}
-\pgfplotstableread{DATA/cottonexps.dat}{\table}
 %---------------------------------------------------------------------------------------------------------%
 
 \usepackage{subfiles}
