new file:   Paper/.vscode/ltex.hiddenFalsePositives.en-US.txt 	deleted:    Paper/HistoryIA.aux 	modified:   Paper/HistoryIA.bbl 	new file:   Paper/HistoryIA.bbl-SAVE-ERROR 	deleted:    Paper/HistoryIA.bcf 	deleted:    Paper/HistoryIA.blg 	deleted:    Paper/HistoryIA.log 	deleted:    Paper/HistoryIA.out 	modified:   Paper/HistoryIA.pdf 	deleted:    Paper/HistoryIA.run.xml 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/HistoryIA.tex 	deleted:    Paper/HistoryIA.toc 	modified:   Paper/SECTIONS/section_B.tex 	modified:   Paper/TABLES/cotton_v_exports.tex 	modified:   Paper/TABLES/percentage_xports.tex

--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -1,6 +1,6 @@
 % !TeX root = ../HistoryIA.tex
 
-\autocites(The data for figure \ref{fig:1} comes from:)()[(Total Exports)][Table A-III]{northeconomicgrowth1966}[(Cotton Exports)][Part 2, Table 2]{u.s.congressImportsduties1884}
+%\autocites(The data for figure \ref{fig: 2.1} comes from:)()[(Total Exports)][Table A-III]{northeconomicgrowth1966}[(Cotton Exports)][Part 2, Table 2]{u.s.congressImportsduties1884}
 On the eve of the American Civil War, U.S. cotton accounted for over 88\% of the cotton imported into Great Britain \autocite[40]{baileyOtherSide1994}. This 
 cotton was, as noted by Joseph Inikori, the key to the English economy in the mid-19th century: 
 \begin{quote}
@@ -11,20 +11,15 @@ The importance of this economic relationship for the Confederate cause was not l
 foreign policy towards England throughout the course of the war. However, the extent to which this was an effective diplomatic strategy is not comparably evident,
 and is the central focus of this investigation. 
 
-
 In the continental United States, in the time leading up to the war, the amount and value of exported goods skyrocketed, and, though by 1860 the 
 
-\begin{figure}
+\begin{figure}[h]
     \centering
-    \subfloat[caption]{
-        \input{TABLES/cotton_v_exports.tex}
-        \label{fig:subfig1}
+    \input{TABLES/cotton_v_exports.tex}
+    \caption{
+        Total value of exports from the United States\autocite[Table A-III]{northeconomicgrowth1966} (\textemdash) 
+        and total value of raw cotton exports\autocite[Part 2, Table 2]{u.s.congressImportsduties1884} (---);
+        Percentage of total value of U.S. exports coming from cotton (\textcolor{red!75!black}{\textemdash}).
     }
-    \hfill
-    \subfloat[caption]{
-        \input{TABLES/percentage_xports.tex}
-        \label{fig:subfig2}
-    }
-    \caption{Caption for figure 1}
-    \label{fig:1}
+    \label{fig: 2.1}
 \end{figure}
