--- a/Paper/HistoryIA.tex
+++ b/Paper/HistoryIA.tex
@@ -92,7 +92,7 @@ top=60pt
 
 %% DATA
 %---------------------------------------------------------------------------------------------------------%
-\usepackage{pgfplots, subfig}
+\usepackage{pgfplots, subfig, float}
 \pgfplotsset{compat = 1.18}
 %---------------------------------------------------------------------------------------------------------%
 
