modified:   .idea/History_IA.iml 	modified:   .idea/misc.xml 	new file:   Paper/DATA/moreData.py 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/SECTIONS/section_B.tex

--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -11,9 +11,10 @@ The importance of this economic relationship for the Confederate cause was not l
 foreign policy towards England throughout the course of the war. However, the extent to which this was an effective diplomatic strategy is not comparably evident,
 and is the central focus of this investigation. 
 
-In the continental United States, in the time leading up to the war, the amount and value of exported goods skyrocketed, and, though by 1860 the 
+In the continental United States, in the time leading up to the war, the amount and value of exported goods skyrocketed, and, though by 1860 the percentage of 
+the total value of exports that cotton represented was lower than it had been in 1851 Figure~\ref{fig: 2.1}, 
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \input{TABLES/cotton_v_exports.tex}
     \caption{
