--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -1,6 +1,5 @@
 % !TeX root = ../HistoryIA.tex
 
-%\autocites(The data for figure \ref{fig: 2.1} comes from:)()[(Total Exports)][Table A-III]{northeconomicgrowth1966}[(Cotton Exports)][Part 2, Table 2]{u.s.congressImportsduties1884}
 On the eve of the American Civil War, U.S. cotton accounted for over 88\% of the cotton imported into Great Britain \autocite[40]{baileyOtherSide1994}. This 
 cotton was, as noted by Joseph Inikori, the key to the English economy in the mid-19th century: 
 \begin{quote}
@@ -12,15 +11,18 @@ foreign policy towards England throughout the course of the war. However, the ex
 and is the central focus of this investigation. 
 
 In the continental United States, in the time leading up to the war, the amount and value of exported goods skyrocketed, and, though by 1860 the percentage of 
-the total value of exports that cotton represented was lower than it had been in 1851 Figure~\ref{fig: 2.1}, 
+the total value of exports that cotton represented was lower than it had been in 1851, it was at an all-time high in terms of dollar-value (Figure~\ref{fig: B.i}).
+Both the Union and Confederacy knew full well how important this reliance was to be regarding the future of the war's diplomatic front, and it was not long into the
+war that the Union navy began its blockade on southern ports. In the early years of the conflict, between 1861 and 1862, this blockade served as the cornerstone of
+Confederate foreign policy: 
 
 \begin{figure}[ht]
     \centering
     \input{TABLES/cotton_v_exports.tex}
     \caption{
         Total value of exports from the United States\autocite[Table A-III]{northeconomicgrowth1966} (\textemdash) 
-        and total value of raw cotton exports\autocite[Part 2, Table 2]{u.s.congressImportsduties1884} (---);
+        and total value of raw cotton exports\autocite[Part 2, Table 2]{u.s.congressImportsduties1884} (- -);
         Percentage of total value of U.S. exports coming from cotton (\textcolor{red!75!black}{\textemdash}).
     }
-    \label{fig: 2.1}
+    \label{fig: B.i}
 \end{figure}
