modified:   Paper/Bib/History_IA.bib 	modified:   Paper/HistoryIA.bbl 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/HistoryIA.tex 	modified:   Paper/SECTIONS/section_B.tex

--- a/Paper/Bib/History_IA.bib
+++ b/Paper/Bib/History_IA.bib
@@ -44,11 +44,12 @@
   date      = {1966},
   publisher = {New York, Chelsea House-R. Hector},
   url       = {http://archive.org/details/messagespapersof02conf},
-  urldate   = {2024-11-01},
   abstract  = {2 v. 25 cm; Previously published under title: A compilation of the messages and papers of the Confederacy, including the diplomatic correspondence, 1861-1865},
   langid    = {english},
   pagetotal = {790},
-  keywords  = {Confederate States of America -- Politics and government}
+  keywords  = {Confederate States of America -- Politics and government},
+  volume    = {II},
+  volumes   = {II}
 }
 
 @article{ewanEmancipationProclamation2005,
@@ -112,4 +113,12 @@
   date        = {1884},
   institution = {48th Cong., 1st. sess.},
   abstract    = {A compilation of foreign commodities imported and entered for consumption in the United States ; showing the quantities, values, rates of duty, amount of duty received, the average cost, and duties reduced to an equivalent ad valorem rate ; summaries of the values and duties of the principal class or groups ; also, values and duties received and expense at each Customs district and port of delivery ; with schedules of the articles, quantities, and values admitted free of duty, viz: transfers from bond to manufacturing warehouse, materials used in the construction and equipment of vessels, from dominion of Canada, \&c., from the Hawaiian Islands, and salt used in curing fish, during the fiscal years ended June 30, 1867 to 1883, inclusive}
+}
+
+@book{mcphersonBattleCry1988,
+  author    = {McPherson, James},
+  editor    = {},
+  publisher = {Oxford University Press},
+  title     = {Battle Cry of Freedom: The Civil War Era},
+  year      = {1988}
 }
