--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -1,28 +1,38 @@
 % !TeX root = ../HistoryIA.tex
 
+
+\Autocites(Data in Figure~\ref{fig: B.i}:)()[Total exports:][Part 2, Table 2]{u.s.congressImportsduties1884}[Cotton exports:][Table A-III]{northeconomicgrowth1966}
 On the eve of the American Civil War, U.S. cotton accounted for over 88\% of the cotton imported into Great Britain \autocite[40]{baileyOtherSide1994}. This 
 cotton was, as noted by Joseph Inikori, the key to the English economy in the mid-19th century: 
 \begin{quote}
     Indeed, \say{the Industrial Revolution} in England, in the strict sense of the phrase, is little more than a revolution in [...] cotton textile production.
     \autocite[Joseph Inikori, {The Slave Trade and Revolution in Cotton Textile Production in England}, quoted in][40]{baileyOtherSide1994}
 \end{quote}
-The importance of this economic relationship for the Confederate cause was not lost on the rebelling sates, and unquestionably played a significant role in their 
-foreign policy towards England throughout the course of the war. However, the extent to which this was an effective diplomatic strategy is not comparably evident,
-and is the central focus of this investigation. 
-
-In the continental United States, in the time leading up to the war, the amount and value of exported goods skyrocketed, and, though by 1860 the percentage of 
-the total value of exports that cotton represented was lower than it had been in 1851, it was at an all-time high in terms of dollar-value (Figure~\ref{fig: B.i}).
-Both the Union and Confederacy knew full well how important this reliance was to be regarding the future of the war's diplomatic front, and it was not long into the
-war that the Union navy began its blockade on southern ports. In the early years of the conflict, between 1861 and 1862, this blockade served as the cornerstone of
-Confederate foreign policy: 
+On the other side of the Atlantic, in the continental United States, in the time leading up to the war, the amount and value of exported goods skyrocketed, 
+and, though by 1860 the percentage of the total value of exports that cotton represented was lower than it had been in 1851, it was at an all-time high in 
+terms of dollar-value (Figure~\ref{fig: B.i}). The importance of this economic relationship for the Confederate cause was not lost on the rebelling sates, 
+and unquestionably played a significant role in their foreign policy towards England throughout the course of the war. However, the extent to which this was an 
+effective diplomatic strategy is not comparably evident, and is the central focus of this investigation. 
 
 \begin{figure}[ht]
     \centering
     \input{TABLES/cotton_v_exports.tex}
     \caption{
-        Total value of exports from the United States\autocite[Table A-III]{northeconomicgrowth1966} (\textemdash) 
-        and total value of raw cotton exports\autocite[Part 2, Table 2]{u.s.congressImportsduties1884} (- -);
+        Total value of exports from the United States (\textemdash) 
+        and total value of raw cotton exports (- -);
         Percentage of total value of U.S. exports coming from cotton (\textcolor{red!75!black}{\textemdash}).
     }
     \label{fig: B.i}
-\end{figure}
+\end{figure} 
+
+In terms of end goals, the CSA had two when it came to diplomacy with the English: (1) an official recognition of the sovereignty of the nation, with the
+understanding that this would lead to mediation of the conflict by Britain, and (2) the removal of the Union naval blockade on Southern ports
+\Autocites()()[][pp. 383]{mcphersonBattleCry1988}[W.L. Yancey and A. Dudley Mann to Secretary of State R. Toombs, July 15, 1861, in:][pp. 45]{davismessagespapers1966}.
+It is the latter issue's nature terms of international law, and effects on the cotton exports of the south, that would play the most significant role in
+the Anglo-Confederate relations during the early war, as it presented a goal which was \say{much more likely to be obtained within a reasonable time} than
+recognition\autocite[John Slidell to Secretary of State R.M.T. Hunter, September 26, 1862, in:][pp. 187]{davismessagespapers1966}. Though this issue does not
+directly relate of the answer of the question regarding the role of cotton in the recognition of the CSA as sovereign by the English, it does shed light on a 
+crucial, yet heretofore unestablished, piece of this investigation: the importance of cotton in Anglo-Confederate diplomacy. 
+
+Indeed, the main tactic employed by southern diplomats in attempting to secure British condemnation of the blockade was a stressing of the English dependence 
+on the south's cotton exports. The 
