--- a/Paper/HistoryIA.tex
+++ b/Paper/HistoryIA.tex
@@ -41,7 +41,7 @@
 	urlcolor=blue,
 	breaklinks=true,
 	citecolor=blue,
-	linktocpage=true
+	linktocpage=true,
 }
 %---------------------------------------------------------------------------------------------------------%
 
@@ -92,7 +92,7 @@ top=60pt
 
 %% DATA
 %---------------------------------------------------------------------------------------------------------%
-\usepackage{pgfplots, subfig, float}
+\usepackage{pgfplots, subfig, float, capt-of}
 \pgfplotsset{compat = 1.18}
 %---------------------------------------------------------------------------------------------------------%
 
